@@ -4,12 +4,4 @@ Class.send :include, Huberry::AttrEncrypted::Class
 require 'huberry/attr_encrypted/object'
 Object.extend Huberry::AttrEncrypted::Object
 
-if defined?(ActiveRecord)
-  require 'huberry/attr_encrypted/active_record'
-  ActiveRecord::Base.extend Huberry::AttrEncrypted::ActiveRecord
-end
-
-if defined?(DataMapper)
-  require 'huberry/attr_encrypted/data_mapper'
-  DataMapper::Resource.send :include, Huberry::AttrEncrypted::DataMapper
-end
+Dir[File.join(File.dirname(__FILE__), 'huberry', 'attr_encrypted', 'adapters', '*.rb')].each { |file| require file }
